<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">MyAlarm</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_menu_add">More Option</string>
    <string name="no_alarms">No Alarms</string>
    <string name="alarm_deleted">Alarm Deleted</string>
    <string name="alarm_undo">Alarm Undo</string>
    <string name="default_label">No</string>
    <string name="never">Never</string>
    <string name="every_day">Every Day</string>
    <string name="day_concat">,</string>
    
    <string-array name="alarm_set">
        <item>Alarm set for less than 1 minute from now.</item>
        <item>Alarm set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g> from now.</item>
        <item>Alarm set for <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g> from now.</item>
        <item>Alarm set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g> and <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g> from now.</item>
        <item>Alarm set for <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
        <item>Alarm set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g> and <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
        <item>Alarm set for <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g> and <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
        <item>Alarm set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g>, <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g>, and <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
    </string-array>
    
    <string name="day">"1 day"</string>

    <!-- Alarm confirmation toast: plural days -->
    <string name="days">"<xliff:g id="days">%s</xliff:g> days"</string>

    <!-- Alarm confirmation toast: singular hour -->
    <string name="hour">1 hour</string>

    <!-- Alarm confirmation toast: plural hours -->
    <string name="hours"><xliff:g id="hours">%s</xliff:g> hours</string>

    <!-- Alarm confirmation toast: singular minute  -->
    <string name="minute">"1 minute"</string>

    <!-- Alarm confirmation toast: plural minutes  -->
    <string name="minutes">"<xliff:g id="minutes">%s</xliff:g> minutes"</string>
    
    <string name ="alarm_repeat">Repeat</string>
    
    <string name="clock_24_hours_format" translatable="false">kk&#58;mm</string>
    
    <string name="alarm_time_12_hours_format" translatable="false">h&#58;mm&#8202;<b><font size="24" face="sans-serif">a</font></b></string>
    
    <string name="alarm_vibrate">Vibrate</string>
    
    <string name="label">Label</string>
    
    <string name="delete_alarm">Delete Alarm</string>
    
    <string name="collapse_alarm">Collapse Alarm</string>
    
    <string name="expand_alarm">Expand Alarm</string>
    
    <string name="alarm_tomorrow">Tomorrow</string>
    
    <string name="alarm_today">Today</string>
    
    <string name="label_description">Label</string>
    
    <string name="silent_alarm_summary">Silent</string>
    
    <string name="ringtone_description">Ringtone</string>
    
    <string name ="text_on">On</string>
    
    <string name="text_off">Off</string>
    
    <string name="stop_alarm">Stop</string>
    
    <string name="time_picker_cancel">Cancel</string>
    
    <string name="time_picker_set">OK</string>
</resources>
