<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#708090">

<TextView
        android:id="@+id/title"
        style="?android:attr/windowTitleStyle"
        android:layout_marginTop="24dip"
        android:layout_marginLeft="16dip"
        android:layout_marginRight="16dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="4dip"
        android:text="@string/label" />

    <EditText
        android:id="@+id/labelBox"
        style="@style/labelEditTextStyle"
        android:layout_marginTop="16dip"
        android:layout_marginBottom="24dip"
        android:layout_marginLeft="16dip"
        android:layout_marginRight="16dip"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/title" />

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginLeft="16dip"
        android:layout_marginRight="16dip"
        android:layout_marginBottom="16dip"
        android:layout_below="@id/labelBox">

        <Button
            android:id="@+id/cancelButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_height="wrap_content"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:textSize="@dimen/dialog_button_font_size"
            android:textColor="@color/clock_white"
            android:text="@string/time_picker_cancel" />

        <Button
            android:id="@+id/setButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_height="wrap_content"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:textSize="@dimen/dialog_button_font_size"
            android:textColor="@color/hot_pink"
            android:text="@string/time_picker_set" />

    </LinearLayout>
</RelativeLayout>

